k8s/deployment-current-time-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: current-time-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: current-time-service
  template:
    metadata:
      labels:
        app: current-time-service
    spec:
      containers:
        - name: current-time-service
          image: louisgiraudel/current_time_service:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: current-time-service-service
spec:
  selector:
    app: current-time-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 32000 # Choisis un port libre sur ton hôte
  type: NodePort
