k8s/deployment-message-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: louisgiraudel/message_service:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: message-service-service
spec:
  selector:
    app: message-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
